[package]
name = "deprive"
version = "0.2.1"
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Tired of negative impls? Use deprive instead of derive!"
repository = "https://github.com/ambiso/deprive"
homepage = "https://github.com/ambiso/deprive"
documentation = "https://docs.rs/deprive/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = {version="1.0", features=["full"]}
quote = "1.0"

[lib]
proc-macro = true
